[project]
name = "runpod-flash-examples"
version = "1.0.0"
description = "A collection of example applications showcasing Runpod Flash - a framework for building production-ready AI applications with distributed GPU and CPU computing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "runpod-flash",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
